--- a/index.html
+++ b/index.html
@@ -14,26 +14,77 @@
           alt="Item 1" />
         <h3>Prato de Carne</h3>
         <p>R$ 30,00</p>
-        <button>Adicionar</button>
+        <div class="quantidade-container">
+          <label for="quantidade-item-1">Quantidade:</label>
+          <input type="number" value="1" min="1" id="quantidade-item-1" />
+        </div>
+        <button
+          onclick="adicionarAoCarrinho('Prato de Carne', 30, 'quantidade-item-1')">
+          Adicionar
+        </button>
       </div>
       <div class="menu-item">
         <img src="https://via.placeholder.com/120" alt="Item 2" />
         <h3>Item 2</h3>
         <p>R$ 15,00</p>
-        <button>Adicionar</button>
+        <div class="quantidade-container">
+          <label for="quantidade-item-1">Quantidade:</label>
+          <input type="number" value="1" min="1" id="quantidade-item-2" />
+        </div>
+        <button
+          onclick="adicionarAoCarrinho('Item 2', 15, 'quantidade-item-2')">
+          Adicionar
+        </button>
       </div>
       <div class="menu-item">
         <img src="https://via.placeholder.com/120" alt="Item 3" />
         <h3>Item 3</h3>
         <p>R$ 20,00</p>
-        <button>Adicionar</button>
+        <div class="quantidade-container">
+          <label for="quantidade-item-1">Quantidade:</label>
+          <input type="number" value="1" min="1" id="quantidade-item-3" />
+        </div>
+        <button
+          onclick="adicionarAoCarrinho('Item 3', 20, 'quantidade-item-3')">
+          Adicionar
+        </button>
       </div>
       <div class="menu-item">
         <img src="https://via.placeholder.com/120" alt="Item 4" />
         <h3>Item 4</h3>
         <p>R$ 25,00</p>
-        <button>Adicionar</button>
+        <div class="quantidade-container">
+          <label for="quantidade-item-1">Quantidade:</label>
+          <input type="number" value="1" min="1" id="quantidade-item-4" />
+        </div>
+        <button
+          onclick="adicionarAoCarrinho('Item 4', 25, 'quantidade-item-4')">
+          Adicionar
+        </button>
       </div>
     </div>
+
+    <div class="carrinho-container">
+      <div class="carrinho-icone" onclick="toggleCarrinho()">🛒</div>
+      <div class="carrinho-detalhado">
+        <h3>Carrinho de Compras</h3>
+        <ul id="carrinho-lista"></ul>
+        <p id="total">Total: R$ 0,00</p>
+        <button class="botao-finalizar" onclick="mostrarModal()">
+          Finalizar pedido
+        </button>
+      </div>
+    </div>
+
+    <div class="modal" id="modal-pagamento">
+      <div class="modal-content">
+        <h3>Escolha a forma de pagamento</h3>
+        <button onclick="escolherFormaPagamento('Dinheiro')">Dinheiro</button>
+        <button onclick="escolherFormaPagamento('Cartão')">Cartão</button>
+        <button onclick="escolherFormaPagamento('PIX')">PIX</button>
+      </div>
+    </div>
+
+    <script src="./src/main/resources/scripts/index.js"></script>
   </body>
 </html>
